--- a/src/index.html
+++ b/src/index.html
@@ -1,55 +1,53 @@
-<!DOCTYPE HTML>
-<meta charset="utf-8">
+<!DOCTYPE html>
+<meta charset="utf-8" />
 
 <head>
   <title>Админка для магазина</title>
-  <link rel="apple-touch-icon-precomposed" href="/assets/favicon/apple-touch-icon-precomposed.png">
-  <link rel="icon" href="/assets/favicon/favicon.png">
+  <link
+    rel="apple-touch-icon-precomposed"
+    href="/assets/favicon/apple-touch-icon-precomposed.png"
+  />
+  <link rel="icon" href="/assets/favicon/favicon.png" />
 </head>
 
 <body>
-
-<main class="main">
-  <div class="progress-bar">
-    <div class="progress-bar__line"></div>
-  </div>
-  <aside class="sidebar">
-    <h2 class="sidebar__title">
-      <a href="/">shop admin</a>
-    </h2>
-    <ul class="sidebar__nav">
-      <li>
-        <a href="/" data-page="dashboard">
-          <i class="icon-dashboard"></i> <span>Dashboard</span>
-        </a>
-      </li>
-      <li>
-        <a href="/products" data-page="products">
-          <i class="icon-products"></i> <span>Products</span>
-        </a>
-      </li>
-      <li>
-        <a href="/categories" data-page="categories">
-          <i class="icon-categories"></i> <span>Categories</span>
-        </a>
-      </li>
-      <li>
-        <a href="/sales" data-page="sales">
-          <i class="icon-sales"></i> <span>Sales</span>
-        </a>
-      </li>
-    </ul>
-    <ul class="sidebar__nav sidebar__nav_bottom">
-      <li>
-      <!-- TODO: implement toggling  -->
-        <button type="button" class="sidebar__toggler">
-          <i class="icon-toggle-sidebar"></i> <span>Toggle sidebar</span>
-        </button>
-      </li>
-    </ul>
-  </aside>
-  <section class="content" id="content">
-
-  </section>
-</main>
+  <main class="main">
+    <div class="progress-bar">
+      <div class="progress-bar__line"></div>
+    </div>
+    <aside class="sidebar">
+      <h2 class="sidebar__title">
+        <a href="/">shop admin</a>
+      </h2>
+      <ul class="sidebar__nav">
+        <li>
+          <a href="/" data-page="dashboard">
+            <i class="icon-dashboard"></i> <span>Панель Управления</span>
+          </a>
+        </li>
+        <li>
+          <a href="/products" data-page="products">
+            <i class="icon-products"></i> <span>Товары</span>
+          </a>
+        </li>
+        <li>
+          <a href="/categories" data-page="categories">
+            <i class="icon-categories"></i> <span>Категории</span>
+          </a>
+        </li>
+        <li>
+          <a href="/sales" data-page="sales"> <i class="icon-sales"></i> <span>Продажи</span> </a>
+        </li>
+      </ul>
+      <ul class="sidebar__nav sidebar__nav_bottom">
+        <li>
+          <!-- TODO: implement toggling  -->
+          <button type="button" class="sidebar__toggler">
+            <i class="icon-toggle-sidebar"></i> <span>Скрыть панель</span>
+          </button>
+        </li>
+      </ul>
+    </aside>
+    <section class="content" id="content"></section>
+  </main>
 </body>
